--- a/themes/rois/scss/modules/footer-content.scss
+++ b/themes/rois/scss/modules/footer-content.scss
@@ -14,7 +14,7 @@
     }
 
     p {
-        color: $main-text-color;
+        color: $footer-text-color;
     }
 
     i {
