--- a/themes/rois/scss/variables-dark.scss
+++ b/themes/rois/scss/variables-dark.scss
@@ -1,8 +1,9 @@
-$base-color: #30111e !default;
-$light-base-color: #30111e;
+$base-color: #192a40 !default;
+$light-base-color: #192a40;
 $header-color: #cc9327 !default;
-$footer-color: #30111e !default;
+$footer-color: #192a40 !default;
+$footer-text-color: #e3e6ea;
 $link-color: #cc9327;
 $link-hover: #cc9327;
-$border-color: #403219;
+$border-color: #e3e6ea;
 $main-text-color: #e3e6ea;
