--- a/themes/rois/scss/variables.scss
+++ b/themes/rois/scss/variables.scss
@@ -2,6 +2,7 @@ $base-color: #b4c0d0 !default;
 $light-base-color: #e3e6ea;
 $header-color: #192a40 !default;
 $footer-color: #192a40 !default;
+$footer-text-color: #e3e6ea;
 $link-color: #cc9327;
 $link-hover: #e3e6ea;
 $border-color: #403219;
